--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -30,6 +30,8 @@
     min-height: 100vh;
     flex-flow: column wrap;
     justify-content: center;
+    margin: 0 5.6rem;
+    padding: 10rem 3rem;
 }
 .grid-main-heading{
     margin-bottom: 1rem;
